feat: add useBattery hook for monitoring battery status and events

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
-    "cSpell.words": ["heur", "longtask", "Mbps"],
+    "cSpell.words": [
+        "chargingchange",
+        "chargingtimechange",
+        "dischargingtimechange",
+        "heur",
+        "levelchange",
+        "longtask",
+        "Mbps",
+        "onchargingchange",
+        "onchargingtimechange",
+        "ondischargingtimechange",
+        "onlevelchange"
+    ],
     "biome.enabled": false
 }
