--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npx tsc",
-        "format": "npx prettier --write ."
+        "format": "npx prettier --write .",
+        "dev:web": "vite",
+        "preview:web": "vite preview",
+        "build:web": "vite build --outDir build/"
     },
     "keywords": [
         "react",
@@ -47,10 +50,12 @@
     "devDependencies": {
         "@types/react": "^19.1.12",
         "@types/react-dom": "^19.1.9",
+        "@vitejs/plugin-react": "^5.0.2",
         "prettier": "3.6.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "vite": "^7.1.4"
     },
     "engines": {
         "node": ">=22"
