Add initial HTML and CSS files, update build output directory, and adjust TypeScript configuration
- Created index.html for the main entry point of the application.
- Added index-tn0RQdqM.css for styling.
- Changed build output directory from 'build/' to 'docs/' in package.json.
- Updated tsconfig.json to exclude specific files and directories from compilation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,5 +44,13 @@
         "forceConsistentCasingInFileNames": true,
         "noImplicitAny": true,
         "allowJs": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "build",
+        "/main.jsx",
+        "/index.html",
+        "/vite.config.js",
+        "/tailwind.config.js"
+    ]
 }
