refactor: remove unused files and update build configurations
- Deleted unused CSS file and index.html from docs/assets and docs respectively.
- Changed output directory for Vite build from 'docs/' to 'dist/' in package.json.
- Updated TypeScript output directory from 'dist' to 'build' in tsconfig.json.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "format": "npx prettier --write .",
         "dev:web": "vite",
         "preview:web": "vite preview",
-        "build:web": "vite build --outDir docs/"
+        "build:web": "vite build --outDir dist/"
     },
     "keywords": [
         "react",
