fix: add build directory to .gitignore and update deploy script in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "format": "npx prettier --write .",
         "dev:web": "vite",
         "preview:web": "vite preview",
-        "build:web": "vite build --outDir dist/"
+        "build:web": "vite build --outDir dist/",
+        "deploy": "npm run format && npm run build && npm run deploy:web"
     },
     "keywords": [
         "react",
