refactor: update HTML and JavaScript files for improved structure and performance
- Updated index.html to reference the new JavaScript asset.
- Modified package.json to correct the build command for deployment.
- Cleaned up TypeScript definition file by removing unnecessary newline.
- Refactored main.js for better readability and consistency in JSX syntax.
- Enhanced component structure in main.js for improved maintainability.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "dev:web": "vite",
         "preview:web": "vite preview",
         "build:web": "vite build --outDir dist/",
-        "deploy": "npm run format && npm run build && npm run deploy:web"
+        "deploy": "npm run format && npm run build && npm run build:web"
     },
     "keywords": [
         "react",
